# kairos-app

./: .env.example  .replit  README.md  pyproject.toml  replit.md
accounts/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
attached_assets/: Pasted--Enhance-a-web-application-by-improving-visual-design-u_1765828422289.txt  Pasted--Goal-Transform-a-SaaS-website-to-have-an-elegant-black_1765827373879.txt  Pasted-Continue-from-the-current-state-of-the-existing-Kairos-_1765906974952.txt  Pasted-Continue-from-the-current-state-of-the-existing-Kairos-_1765908913985.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765903994711.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765907720112.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765909863884.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765912457865.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765916611459.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765967461852.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1765969623857.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1766067075380.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1766070823729.txt  Pasted-Continue-in-the-existing-Kairos-Django-codebase-Do-not-_1766071842039.txt  Pasted-IMPORTANT-RULES-Do-NOT-turn-this-into-a-Fiverr-style-ma_1765895079171.txt  Pasted-The-web-application-by-improving-visual-design-user-exp_1765861710593.txt  (+5 more)
blog/: urls.py  (+3 more)
(+115 files in other folders)
