[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.9",
    "django>=5.2.9",
    "django-environ>=0.12.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.9",
    "stripe>=14.0.1",
    "whitenoise>=6.11.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kairos.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
